--- a/primer_intento/html5_y_blog.html
+++ b/primer_intento/html5_y_blog.html
@@ -7,7 +7,7 @@
 		<!-- Añade una etiqueta span de clase subrayado las palabras "header, footer, main, nav o article" del primer párrafo y declara la regla CSS correspondiente en el header-->
 		<!-- Declara una regla para todos los parrafos de la página para que la letra tenga color #444 y tamaño 20px -->
 		<style>
-			.subrayado{text-decoration:underline}
+			.subrayado {text-decoration:underline}
 			p {color:#444;font-size:20px}
 		</style>
 	</head>
@@ -17,7 +17,7 @@
 	<!-- Añade estos dos párrafos -->
 	<!-- Formatea la frase "elementos de marcado con significado semántico." en negrita como texto destacado. -->
 	<!-- Formatea con cursiva enfatizada lo que está escrito en inglés -->
-	<p>Una de las principales características de HTML5 son los <strong>elementos de marcado con significado semántico</strong>. Por nombrar algunos: <span class="subrayado">header, footer, main, nav o article</span>. El significado semántico de estos elementos supone importantes ventajas. Por ejemplo, a cada uno se le asigna un role ARIA <em>(Accessible Rich Internet Application)</em> específico por defecto. Esto ayuda a mejorar la accesibilidad a nuestra página web para los que utilicen alguna tecnología de asistencia en la navegación como pueden ser los lectores de pantalla (screen readers).</p>
+	<p>Una de las principales características de HTML5 son los <strong>elementos de marcado con significado semántico</strong>. Por nombrar algunos: <span class="subrayado"><em>header, footer, main, nav o article</em></span>. El significado semántico de estos elementos supone importantes ventajas. Por ejemplo, a cada uno se le asigna un role ARIA <em>(Accessible Rich Internet Application)</em> específico por defecto. Esto ayuda a mejorar la accesibilidad a nuestra página web para los que utilicen alguna tecnología de asistencia en la navegación como pueden ser los lectores de pantalla <em>(screen readers)</em>.</p>
 	<p>En este artículo voy a hacer un repaso de como debería ser la estructura de un blog en HTML5 intentando abarcar los elementos característicos de un blog estándar: navegación, post, fechas, comentarios, columna lateral, etc. Me he inspirado en el artículo de <em>Bruce Lawson Designing a blog with HTML5</em>, y he añadido información más actualizada. Ponte cómodo que empezamos.</p>
 	<!-- Añade la cabecera de tipo 2 con el texto "DOCTYPE" -->
 	<h2>DOCTYPE</h2>
