--- a/primer_intento/indice.html
+++ b/primer_intento/indice.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html/>
+﻿<!DOCTYPE html>
 <html lang="es-ES"> <!-- Es importante especificar el idioma de la página -->
 	<head>
 		<title>Mi primera programación</title>
-		<meta charset="utf-8"/> <!-- Aquí se declara la codificación con acentos -->
+		<meta charset="utf-8"> <!-- Aquí se declara la codificación con acentos -->
 		<!-- Declaración de estilos css dentro del propio html -->
 		<style>
 			.rojo {color: red}
@@ -11,7 +11,7 @@
 	<body>
 		<!-- La etiqueta p sirve paea declarar párrafos de textos -->
 		<p class="rojo">Un párrafo de ejemplo</p> <!-- Este párrafo tiene la letra de un color -->
-		<p style="color:sienna">Otro párrafo de ejemplo.<br/> <!-- La etiqueta br hace un salto de línea (break) -->
+		<p style="color:sienna">Otro párrafo de ejemplo.<br> <!-- La etiqueta br hace un salto de línea (break) -->
 		Con salto de línea
 		</p>
 	</body>
